Redmine Issue 863 PURPOSE: Browse Specimens Styling DESCRIPTION: changing flow[size] <a> to display: inline-flex from inline-block so that list item is aligned at top next to the <ol> number.

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -2382,7 +2382,7 @@ ol.flowXS li {
 	padding-right: .5rem;
 }
 ol.flowXS li a {
-	display: inline-block;
+	display: inline-flex;
 	padding-right: 3px;
 }
 ol.flowSm {
@@ -2396,7 +2396,7 @@ ol.flowSm li {
 	padding-right: .5rem;
 }
 ol.flowSm li a {
-	display: inline-block;
+	display: inline-flex;
 	padding-right: 3px;
 }
 ol.flowMd {
@@ -2411,7 +2411,7 @@ ol.flowMd li {
 	padding-right: .5rem;
 }
 ol.flowMd li a {
-	display: inline-block;
+	display: inline-flex;
 	padding-right: 3px;
 }	
 ol.flowLg {
@@ -2439,7 +2439,7 @@ ol.flowXL li {
 	padding-right: .5rem;
 }
 ol.flowXL li a {
-	display: inline-block;
+	display: inline-flex;
 	padding-right: 3px;
 }
 }
@@ -2471,7 +2471,7 @@ ol.flowXS li {
 	padding-right: 1rem;
 }
 ol.flowXS li a {
-	display: inline-block;
+	display: inline-flex;
 	padding-right: 3px;
 }
 ol.flowSm {
@@ -2485,7 +2485,7 @@ ol.flowSm li {
 	padding-right: .5rem;
 }
 ol.flowSm li a {
-	display: inline-block;
+	display: inline-flex;
 	padding-right: 3px;
 }
 ol.flowMd {
@@ -2499,7 +2499,7 @@ ol.flowMd li {
 	padding-right: .5rem;
 }
 ol.flowMd li a {
-	display: inline-block;
+	display: inline-flex;
 	padding-right: 3px;
 }	
 ol.flowLg {
@@ -2513,7 +2513,7 @@ ol.flowLg li {
 	padding-right: .5rem;
 }
 ol.flowLg li a {
-	display: inline-block;
+	display: inline-flex;
 	padding-right: 3px;
 }	
 ol.flowXL {
@@ -2540,7 +2540,7 @@ ol.flowNone li {
 	width: 100%;
 }
 ol.flowNone li a {
-	display: inline-block;
+	display: inline-flex;
 	padding-right: 3px;
 }
 }
@@ -2557,7 +2557,7 @@ ol.flowXS li {
 	padding-right: .5rem;
 }
 ol.flowXS li a {
-	display: inline-block;
+	display: inline-flex;
 	padding-right: 3px;
 }
 ol.flowSm {
@@ -2572,7 +2572,7 @@ ol.flowSm li {
 	list-style-position:inside;
 }
 ol.flowSm li a {
-	display: inline-block;
+	display: inline-flex;
 	padding-right: 3px;
 }
 ol.flowMd {
@@ -2587,7 +2587,7 @@ ol.flowMd li {
 	list-style-position:inside;/*makes the number go to the top of the bullet; otherwise, it vert-aligns to middle*/
 }
 ol.flowMd li a {
-	display: inline-block;
+	display: inline-flex;
 	padding-right: 3px;
 }	
 ol.flowLg {
@@ -2602,7 +2602,7 @@ ol.flowLg li {
 	list-style-position:inside;
 }
 ol.flowLg li a {
-	display: inline-block;
+	display: inline-flex;
 	padding-right: 3px;
 }	
 ol.flowXL {
@@ -2617,7 +2617,7 @@ ol.flowXL li {
 	list-style-position:inside;
 }
 ol.flowXL li a {
-	display: inline-block;
+	display: inline-flex;
 	padding-right: 3px;
 }
 .tab-content {
@@ -2644,7 +2644,7 @@ ol.flowXS li {
 	list-style-position:inside;
 }
 ol.flowXS li a {
-	display: inline-block;
+	display: inline-flex;
 	padding-right: 3px;
 }
 ol.flowSm {
@@ -2674,7 +2674,7 @@ ol.flowMd li {
 	list-style-position:inside;
 }
 ol.flowMd li a {
-	display: inline-block;
+	display: inline-flex;
 	padding-right: 3px;
 }	
 ol.flowLg {
@@ -2687,7 +2687,7 @@ ol.flowLg li {
 	width: 200px;
 }
 ol.flowLg li a {
-	display: inline-block;
+	display: inline-flex;
 	padding-right: 3px;
 }	
 ol.flowXL {
@@ -2702,7 +2702,7 @@ ol.flowXL li {
 	list-style-position:inside;
 }
 ol.flowXL li a {
-	display: inline-block;
+	display: inline-flex;
 	padding-right: 3px;
 }
 ol.flowNone {
@@ -2717,7 +2717,7 @@ ol.flowNone li {
 	list-style-position:inside;
 }
 ol.flowNone li a {
-	display: inline-block;
+	display: inline-flex;
 	padding-right: 3px;
 }
 .tab-content {
@@ -2737,7 +2737,7 @@ ol.flowXS li {
 	list-style-position:inside;
 }
 ol.flowXS li a {
-	display: inline-block;
+	display: inline-flex;
 	padding-right: 3px;
 }
 ol.flowSm {
@@ -2752,7 +2752,7 @@ ol.flowSm li {
 	list-style-position:inside;
 }
 ol.flowSm li a {
-	display: inline-block;
+	display: inline-flex;
 	padding-right: 3px;
 }
 ol.flowMd {
@@ -2767,7 +2767,7 @@ ol.flowMd li {
 	list-style-position:inside;
 }
 ol.flowMd li a {
-	display: inline-block;
+	display: inline-flex;
 	padding-right: 3px;
 }	
 ol.flowLg {
@@ -2782,7 +2782,7 @@ ol.flowLg li {
 	list-style-position:inside;
 }
 ol.flowLg li a {
-	display: inline-block;
+	display: inline-flex;
 	padding-right: 3px;
 }	
 ol.flowXL {
@@ -2797,7 +2797,7 @@ ol.flowXL li {
 	list-style-position:inside;
 }
 ol.flowXL li a {
-	display: inline-block;
+	display: inline-flex;
 	padding-right: 3px;
 }
 ol.flowNone {
@@ -2812,7 +2812,7 @@ ol.flowNone li {
 	list-style-position:inside;
 }
 ol.flowNone li a {
-	display: inline-block;
+	display: inline-flex;
 	padding-right: 3px;
 }
 .tab-content {
@@ -2838,7 +2838,7 @@ ol.flowXS li {
 	list-style-position:inside;
 }
 ol.flowXS li a {
-	display: inline-block;
+	display: inline-flex;
 	padding-right: 3px;
 }
 ol.flowSm {
@@ -2853,7 +2853,7 @@ ol.flowSm li {
 	list-style-position:inside;
 }
 ol.flowSm li a {
-	display: inline-block;
+	display: inline-flex;
 	padding-right: 3px;
 }
 ol.flowMd {
@@ -2868,7 +2868,7 @@ ol.flowMd li {
 	list-style-position:inside;
 }
 ol.flowMd li a {
-	display: inline-block;
+	display: inline-flex;
 	padding-right: 3px;
 }	
 ol.flowLg {
@@ -2883,7 +2883,7 @@ ol.flowLg li {
 	list-style-position:inside;
 }
 ol.flowLg li a {
-	display: inline-block;
+	display: inline-flex;
 	padding-right: 3px;
 }	
 ol.flowXL {
@@ -2898,7 +2898,7 @@ ol.flowXL li {
 	list-style-position:inside;
 }
 ol.flowXL li a {
-	display: inline-block;
+	display: inline-flex;
 	padding-right: 3px;
 }
 ol.flowNone {
@@ -2913,7 +2913,7 @@ ol.flowNone li {
 	list-style-position:inside;
 }
 ol.flowNone li a {
-	display: inline-block;
+	display: inline-flex;
 	padding-right: 3px;
 }
 .tab-content {
